--- a/templates/index.html
+++ b/templates/index.html
@@ -4,7 +4,7 @@
       xmlns:fb="http://www.facebook.com/2008/fbml">
 <head>
   <meta charset="utf-8">
-  <title>LNUG - London Node User Group</title>
+  <title>Page title goes here</title>
   <meta name="description" content="London Node.js User Group is a meetup for developers but everyone is welcome. We meet every month to talk about Node, Javascript and to network">
   <!-- og  + meta data -->
   <meta property="og:title" content="LNUG - London Node User Group">
@@ -46,7 +46,7 @@
       </div>
       <div class="lnug-nextevent">
         <div class="text-center">
-          <p>Next meetup: <span class="lnug-nextmeetup">March 25th</span></p>
+          <p>Next meetup: <span class="lnug-nextmeetup">Octobvember 77th 3921</span></p>
         </div>
       </div>
     </div>
