--- a/templates/index.html
+++ b/templates/index.html
@@ -4,7 +4,7 @@
       xmlns:fb="http://www.facebook.com/2008/fbml">
 <head>
   <meta charset="utf-8">
-  <title>Page title goes here</title>
+  <title>LNUG - London Node User Group</title>
   <meta name="description" content="London Node.js User Group is a meetup for developers but everyone is welcome. We meet every month to talk about Node, Javascript and to network">
   <!-- og  + meta data -->
   <meta property="og:title" content="LNUG - London Node User Group">
